<resources>
    <string name="app_name">BOZON</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_register">Регистрация</string>
    <string name="title_activity_login">BOZON</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_name">Имя</string>
    <string name="btn_login_main">Начать</string>
    <string name="btn_register">РЕГИСТРАЦИЯ</string>
    <string name="btn_link_to_register">Зарегистрироваться</string>
    <string name="btn_link_to_login">Уже зарегистрирован! Войти.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Выйти</string>
    <string name="name">Имя</string>
    <string name="title_activity_my_profile">Личный кабинет</string>
    <string name="title_activity_notification">Уведомления</string>
    <string name="title_activity_category">Категории Товаров</string>
    <string name="title_activity_sell_goods">Продать товар</string>
    <string name="action_notif">notif</string>
    <string name="title_activity_my__private__profile">My_Private_Profile</string>
    <string name="drawer_item_home">Уведомления</string>
    <string name="drawer_item_free_play">Сообщения</string>
    <string name="drawer_item_custom"></string>
    <string name="drawer_item_settings">Меню</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Выход</string>
    <string name="drawer_item_profile_information">Инфо о профиле</string>
    <string name="title_activity_second">second</string>
    <string name="title_activity_third">Third</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_messages">Messages</string>
    <string name="title_activity_splash">BOZON</string>
    <string name="scanProd">Сканировать товар</string>
    <string name="scan">Сканировать</string>
    <string name="Page1Title">Bozon</string>
    <string name="Page2Title">Fast</string>
    <string name="Page3Title">Free</string>
    <string name="Page4Title">Secure</string>
    <string name="Page5Title">Powerful</string>
    <string name="Page6Title">Server-Based</string>
    <string name="Page7Title">Private</string>
    <string name="Page1Message">Уникальное <![CDATA[<b>приложение</b>]]> для торговли.<![CDATA[<br/>]]>Абсолютно <![CDATA[<b>бесплатно</b>]]> и <![CDATA[<b>защищено</b>]]>.<![CDATA[<b>Все для вас и вашего дома</b>]]></string>
    <string name="Page2Message"><![CDATA[<b>Bozon</b>]]> Мы знаем что вам нужно.<![CDATA[<br/>]]>Здесь вы найдете все!<![CDATA[<br/>]]>Качественно и по низким ценам</string>
    <string name="Page3Message"><![CDATA[<b>Bozon</b>]]> Лучшие смартфоны и планшеты<![CDATA[<br/>]]>От лучших компаний мира<![CDATA[<br/>]]>Вы найдете то,что искали</string>
    <string name="Page4Message"><![CDATA[<b>Bozon</b>]]> Мебель на любой вкус и цвет<![CDATA[<br/>]]>Качество превыше всего<![CDATA[<br/>]]>По качественно и низким ценам</string>
    <string name="Page5Message"><![CDATA[<b>Bozon</b>]]> has no limits on the size of<![CDATA[<br/>]]>tradings.</string>
    <string name="Page6Message"><![CDATA[<b>Bozon</b>]]> lets you access your tradings<![CDATA[<br/>]]>from multiple devices.</string>
    <string name="Page7Message"><![CDATA[<b>Bozon</b>]]> tradings are heavily encrypted<![CDATA[<br/>]]>and can hacked.</string>
    <string name="StartMessaging">Start Using Bozon</string>
    <string name="title_activity_intro">BOZON</string>
    <string name="title_activity_edit_product">EditProductActivity</string>
    <string name="title_activity_all_products">AllProductsActivity</string>
    <string name="title_activity_scanning">Scan Product here</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="title_activity_action__bar_activity">Action_Bar_activity</string>
    <string name="title_activity_test_activity_for_swap">TestActivityForSwap</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_test_one">test_one</string>
    <string name="test">Test text string</string>
    <string name="app_picker_name">Приложения</string>
    <string name="bookmark_picker_name">Закладки</string>
    <string name="button_add_calendar">Добавить в календарь</string>
    <string name="button_add_contact">Добавить контакт</string>
    <string name="button_book_search">Поиск книги</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_custom_product_search">Пользовательский поиск</string>
    <string name="button_dial">Набрать номер</string>
    <string name="button_email">Отправить e-mail</string>
    <string name="button_get_directions">Проложить маршрут</string>
    <string name="button_mms">Послать MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Открыть браузер</string>
    <string name="button_product_search">Поиск товара</string>
    <string name="button_search_book_contents">Поиск в содержании книги</string>
    <string name="button_share_app">Приложение</string>
    <string name="button_share_bookmark">Закладка</string>
    <string name="button_share_by_email">Поделиться через эл. почту</string>
    <string name="button_share_by_sms">Поделиться через SMS</string>
    <string name="button_share_clipboard">Буфер обмена</string>
    <string name="button_share_contact">Контакт</string>
    <string name="button_show_map">Показать карту</string>
    <string name="button_sms">Отправить SMS</string>
    <string name="button_web_search">Поиск в интернете</string>
    <string name="button_wifi">Подключиться к сети</string>
    <string name="contents_contact">Контактная информация</string>
    <string name="contents_email">Адрес эл. почты</string>
    <string name="contents_location">Географические координаты</string>
    <string name="contents_phone">Номер телефона</string>
    <string name="contents_sms">Адрес для SMS</string>
    <string name="contents_text">Текст</string>
    <string name="history_clear_one_history_text">Удалить</string>
    <string name="history_clear_text">Удалить историю</string>
    <string name="history_email_title">История сканирования</string>
    <string name="history_empty">Пусто</string>
    <string name="history_empty_detail">Нет сохраненных штрих-кодов</string>
    <string name="history_send">Отправить историю</string>
    <string name="history_title">История</string>
    <string name="menu_encode_mecard">Использовать MECARD</string>
    <string name="menu_encode_vcard">Использовать vCard</string>
    <string name="menu_help">Помощь</string>
    <string name="menu_history">История</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_share">Поделиться</string>
    <string name="msg_bulk_mode_scanned">Массовый режим: штрих-код распознан и сохранен</string>
    <string name="msg_camera_framework_bug">К сожалению, возникла ошибка камеры. Может потребоваться перезагрузить устройство.</string>
    <string name="msg_default_format">Формат</string>
    <string name="msg_default_meta">Метаданные</string>
    <string name="msg_default_mms_subject">Привет</string>
    <string name="msg_default_status">Чтобы сканировать штрих-код, поместите его в прямоугольник видоискателя.</string>
    <string name="msg_default_time">Время</string>
    <string name="msg_default_type">Тип</string>
    <string name="msg_encode_contents_failed">Невозможно создать штрих-код из текущих данных.</string>
    <string name="msg_error">Ошибка</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">К сожалению, запрошенное приложение не может быть запущено. Возможно, штрих-код содержит неверные данные.</string>
    <string name="msg_invalid_value">Неверное значение</string>
    <string name="msg_redirect">Переслать</string>
    <string name="msg_sbc_book_not_searchable">К сожалению, поиск в этой книге невозможен.</string>
    <string name="msg_sbc_failed">К сожалению, при поиске произошла ошибка.</string>
    <string name="msg_sbc_no_page_returned">Ни одна страница не возвращена.</string>
    <string name="msg_sbc_page">Страница</string>
    <string name="msg_sbc_results">Результаты</string>
    <string name="msg_sbc_searching_book">Поиск книги\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Фрагмент недоступен</string>
    <string name="msg_share_explanation">Вы можете поделиться данными, отобразив на экране своего телефона штрих-код, который можно считать другим телефоном.</string>
    <string name="msg_share_text">Или введите текст</string>
    <string name="msg_sure">Вы уверены?</string>
    <string name="msg_unmount_usb">К сожалению, SD-карта не доступна.</string>
    <string name="preferences_actions_title">Когда штрих-код найден\u2026</string>
    <string name="preferences_auto_focus_title">Использовать автофокус</string>
    <string name="preferences_auto_open_web_title">Открывать веб-страницы автоматически</string>
    <string name="preferences_bulk_mode_summary">Постоянно сканировать и сохранять штрих-коды</string>
    <string name="preferences_bulk_mode_title">Массовое сканирование</string>
    <string name="preferences_copy_to_clipboard_title">Копировать в буфер обмена</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Подстановки: %s = содержание, %f = формат, %t = тип</string>
    <string name="preferences_custom_product_search_title">URL пользовательского поиска</string>
    <string name="preferences_decode_1D_industrial_title">1D промышленные</string>
    <string name="preferences_decode_1D_product_title">1D товарные</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR-коды</string>
    <string name="preferences_device_bug_workarounds_title">Исправление ошибок устройства</string>
    <string name="preferences_disable_barcode_scene_mode_title">Не использовать режим съемки "штрих-код"</string>
    <string name="preferences_disable_continuous_focus_summary">Использовать только стандартный режим фокусировки</string>
    <string name="preferences_disable_continuous_focus_title">Не использовать непрерывную фокусировку</string>
    <string name="preferences_disable_exposure_title">Не использовать экспозицию</string>
    <string name="preferences_disable_metering_title">Не использовать измерение</string>
    <string name="preferences_front_light_auto">Автоматически</string>
    <string name="preferences_front_light_off">Выключен</string>
    <string name="preferences_front_light_on">Включен</string>
    <string name="preferences_front_light_summary">Улучшает распознавание в условиях низкой освещенности, но может вызвать блики. Работает не на всех устройствах.</string>
    <string name="preferences_front_light_title">Фонарик</string>
    <string name="preferences_general_title">Общие настройки</string>
    <string name="preferences_history_summary">Сохранять распознанные штрих-коды в истории</string>
    <string name="preferences_history_title">Добавлять в историю</string>
    <string name="preferences_invert_scan_summary">Сканирование белых штрих-кодов на черном фоне. Не работает на некоторых устройствах.</string>
    <string name="preferences_invert_scan_title">Инвертировать</string>
    <string name="preferences_name">Настройки</string>
    <string name="preferences_orientation_title">Не поворачивать автоматически</string>
    <string name="preferences_play_beep_title">Звуковой сигнал</string>
</resources>